# governed-ai-delivery

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPILOT_SKILLS_MIGRATION.md  CROSS_REPO_GOVERNANCE_PLAN.md  IMPROVEMENT_PLAN.md  L5_IMPLEMENTATION_PLAN.md  LICENSE  NOTICE.md  PARITY_TEST.md  README.md  SECURITY.md  bash.exe.stackdump  mermaid.md  pyproject.toml
.claude/: settings.local.json
.github/: CODEOWNDERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/instructions/: adapters.instructions.md  security.instructions.md
.github/prompts/: architecture-preflight.prompt.md  implementation-plan.prompt.md  spec-planning-template.prompt.md
.github/workflows/: publish.yml  test.yml
agents/claude-code/: CLAUDE.md  manifest.json
agents/claude-code-ui-angular/: CLAUDE.md  manifest.json
agents/claude-code-ui-react/: CLAUDE.md  manifest.json
agents/codex/: manifest.json
agents/copilot/: copilot-instructions.md  manifest.json
agents/copilot-ui-angular/: copilot-instructions.md  manifest.json
agents/copilot-ui-react/: copilot-instructions.md  manifest.json
ci/: README.md  eval-gate-example.yml  quality-gate-example.yml  ui-eval-gate-example.yml  ui-quality-gate-example.yml
ci/azure/: data-common-gate.yml  databricks-gate.yml  dbt-gate.yml  deepeval-gate.yml  eval-gate.yml  guardrails-check.yml  l3-quality-gate.yml  l3-ui-quality-gate.yml  multi-agent-gate.yml  promptfoo-gate.yml  quality-gate.yml  repo-scope-check.yml  ui-eval-gate.yml  ui-quality-gate.yml
ci/github/: data-common-gate.yml  databricks-gate.yml  dbt-gate.yml  deepeval-gate.yml  guardrails-check.yml  l3-quality-gate.yml  l3-ui-quality-gate.yml  multi-agent-gate.yml  promptfoo-gate.yml  quality-gate.yml  repo-scope-check.yml  (+1 more)
cli/: agent_layout.py  calibrate.py  cmd_apply.py  cmd_extension.py  cmd_init.py  cmd_list.py  cmd_stack.py  cmd_upgrade.py  cmd_validate.py  compat.py  detect.py  doctor.py  extensions.py  fs.py  govkit.py  headers.py  install_common.py  manifest.py  marker.py  overlay.py  paths.py  rule_templating.py  setup_review.py  skill_context.py  stack_select.py  validate.py  version.py
docs/: CROSS_REPO_FEATURES.md  MONOREPO_PATTERN.md  REPO_SCOPE_ANALYSIS_GUIDANCE.md
features/: README.md
plans/: 01_CV_TYPE_PLAN.md  AGENT_LAYOUT_REFACTOR_PLAN.md  CROSS_REPO_GOVERNANCE_PLAN.md  DATA_ENFORCEMENT_HARDENING_PLAN.md  DATA_STACK_DATABRICKS_PLAN.md  GOVERNANCE_ACCELERATOR_PLAN.md  HARNESS_GAP_ROADMAP.md  IMPROVEMENT_PLAN.md  L5_IMPLEMENTATION_PLAN.md  MARKER_WARNING_CONSOLIDATION_PLAN.md  MATURITY_MODEL_L3_L4_SWAP_PLAN.md  MULTI_AGENT_GOVERNANCE_PLAN.md  PROJECT_SHAPE_REFACTOR_PLAN.md  SKILL_ORIENTED_AGENT_ARCHITECTURE_EXTENSION_PLAN.md  SPEC_KIT_POSITIONING.md  STACK_METADATA_UNIFICATION_PLAN.md  STACK_RECORD_DEDUP_PLAN.md  VISION_INFERENCE_EXTENSION_PLAN.md
scripts/: README.md  smoke-dotnet.ps1  smoke-extensions.ps1  smoke-inspect.ps1  smoke-ui-new.ps1  smoke-ui.ps1  smoke.ps1
tests/: test_agent_layout.py  test_agent_skills.py  test_calibrate.py  test_cmd_extension.py  test_detect.py  test_doctor.py  test_extensions.py  test_fixtures.py  test_fs.py  test_govkit.py  test_headers.py  test_l3_instructions.py  test_llm_application.py  test_main_dispatch.py  test_marker.py  test_maturity_model.py  test_overlay.py  test_rule_templating.py  test_schemas.py  test_setup_review.py  test_skill_context.py  test_skill_oriented_agent_architecture.py  test_stack_select.py  test_validate.py  test_vision_inference.py
(+512 files in other folders)
