[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "govkit"
version = "0.1.0"
description = "Governed AI delivery kit — spec-driven scaffolding for AI coding agents"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
  { name = "Accelerated Innovation" }
]
keywords = ["ai", "governance", "scaffolding", "copilot", "claude-code", "specification"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/Accelerated-Innovation/governed-ai-delivery"
Repository = "https://github.com/Accelerated-Innovation/governed-ai-delivery"
Issues = "https://github.com/Accelerated-Innovation/governed-ai-delivery/issues"

[project.scripts]
govkit = "cli.govkit:main"

[tool.hatch.build.targets.wheel]
packages = ["cli"]

[tool.hatch.build.targets.wheel.force-include]
"agents" = "cli/agents"
"docs" = "cli/docs"
"features" = "cli/features"
"governance" = "cli/governance"
"ci" = "cli/ci"

[tool.ruff]
line-length = 100
target-version = "py312"

select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # bugbear
    "I",   # import sorting
]

ignore = [
    "E501" # line length handled by formatter
]

fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

python_files = [
    "test_*.py"
]

addopts = "-ra"

markers = [
    "unit: unit tests",
    "bdd: BDD integration tests",
    "contract: contract tests"
]

# Note: import-linter config below is a reference template for target projects.
# Target projects should copy this section and adjust root_package/containers
# to match their own source layout.
[tool.importlinter]
root_package = "src"

[tool.importlinter.contracts.hexagonal]
name = "Hexagonal Architecture"
type = "layers"

layers = [
    "api",
    "ports",
    "services",
    "adapters",
    "common"
]

containers = ["src"]
